# Lance

./: .gitignore  README.md  accounts.sh  run.sh
contracts/l/src/: contract.rs  lib.rs
contracts/l/src/methods/: initialize.rs  mod.rs
contracts/l/src/storage/: dispute.rs  error.rs  service.rs  service_status.rs  user.rs
contracts/lance/: Cargo.toml
contracts/lance/src/: contract.rs  lib.rs
contracts/lance/src/methods/: blend.rs  blend_calls.rs  dispute.rs  initialize.rs  mod.rs  service.rs  user.rs  vote.rs
contracts/lance/src/storage/: constants.rs  dispute.rs  dispute_status.rs  error.rs  mod.rs  service.rs  service_status.rs  storage.rs  user.rs  vote.rs
contracts/lance/src/tests/: blend.rs  exployee.rs  milestone.rs  mod.rs  service.rs  test.rs  user.rs
contracts/lance/src/tests/config/: contract.rs  utils.rs
contracts/lance/test_snapshots/tests/test/: test_add_and_get_user.1.json  test_create_employee_user.1.json  test_create_employer_user.1.json  test_create_user_with_personal_data.1.json  test_multiple_users_are_independent.1.json  test_service_lifecycle.1.json
